# lakehouse-demo-yt

./: .gitignore  README.md  lakehouse.excalidraw  pyproject.toml
notebooks/: lake_explorations.ipynb  lakehouse_exploration.ipynb
src/: 00_ingest.py  app.py  lake_01_bronze.py  lake_02_silver.py  lake_03_gold.py  lake_pipeline.py  lakehouse_01_bronze.py  lakehouse_02_silver.py  lakehouse_03_gold.py  lakehouse_pipeline.py
