[project]
name = "lakehouse-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==4.2.2",
    "deltalake>=1.4.2",
    "duckdb>=1.4.4",
    "kagglehub>=1.0.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "standard-imghdr>=3.13.0",
    "streamlit>=1.19.0",
]
