[project]
name = "lakehouse-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==4.2.2",
    "deltalake>=1.4.2",
    "duckdb>=1.4.4",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "streamlit>=1.19.0",
]
